k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myshop
  template:
    metadata:
      labels:
        app: myshop
    spec:
      containers:
        - name: myshop
          image: 520819077072.dkr.ecr.ap-south-1.amazonaws.com/anil-docker
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
