k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myshop

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:520819077072:certificate/7f145ef0-e4a0-4bdd-9ca5-8242687b4ac1


spec:
  ingressClassName: alb

  rules:
    - host: myshop.anildevops.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myshop
                port:
                  number: 5000
